<resources>
    <string name="app_name">FanfouDaily</string>
    <string name="action_settings">Settings</string>
    <string name="action_loading">Loading Fanfou on date: </string>
    <string name="network_notworking">Hey you don\'t have internet yet.</string>

    <string name="name">Screen Name</string>
    <string name="timestamp">Timestamp</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="scrollawarefab">io.github.anthonyeef.fanfoudaily.animation.ScrollAwareFABBehavior</string>


    <string name="app_setting_about">About</string>
    <string name="action_visit_fanfoudaily">Visit FanfouDaily Homepage</string>
    <string name="action_visit_repo">Check Github Repository</string>
    <string name="changelog">Changelog</string>
    <string name="developer">Developer</string>

    <string name="coder"> \u0040Anthonyeef</string>

    <string name="blog_address">https://anthonyeef.github.io</string>
    <string name="project_address">https://anthonyeef.github.io/project/android/fanfoudaily</string>
    <string name="project_github">https://github.com/Anthonyeef/FanfouDaily</string>
</resources>
